Tue Jul 20 07:38:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/SSL_CallbackManager.h:
          Fixed comment typo.

Tue Jul 20 05:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTP_BasicAuthentication.cpp:
        * protocols/ace/INet/HTTP_BasicAuthentication.h:
        * protocols/ace/INet/HTTP_BasicAuthentication.inl:
        * protocols/ace/INet/inet.mpc:
          Added basic support for HTTP Basic Authentication scheme.

Tue Jul 20 03:56:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTP_SessionBase.cpp:
          Fixed MSVC 7.1 compile problems.

        * protocols/ace/INet/HTTP_Simple_exec.cpp:
          Fixed compile problems for non-SSL builds.

Tue Jul 20 03:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inetssl.mpb:
        * protocols/ace/INet/inet_ssl.mpb:
          Fuzz fixes.

Mon Jul 19 11:50:59 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/TSS_T.inl:
        * ace/TSS_T.h:
        * ace/TSS_T.cpp:
          Mostly fixed bug 3539. It doesn't fix a case when main thread
          doesn't own ACE_TSS but still uses it. Fixing the later is not
          straight forward and will require a lot more efforts.
          Also rearranged the code so that it has less duplicates.

        * tests/run_test.lst:
          Marked the test as fixed.

Mon Jul 19 09:15:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * bin/MakeProjectCreator/config/global.features:
        * protocols/ace/INet/inet.mpc:
          Added new feature 'exclude_inet' to allow builds to
          explicitly exclude building INet.

Mon Jul 19 08:49:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTPS_Session.cpp:
        * protocols/ace/INet/HTTPS_Session.h:
          Fixed compile errors byadding version check to disable